--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+--extra-index-url https://download.pytorch.org/whl/cu121
 torch==2.3.1+cu121           # PyTorch (CUDA 12.1 build; works on CUDA 12.8 driver)
 torchvision==0.18.1+cu121
 torchaudio==2.3.1+cu121
@@ -16,3 +17,10 @@ scikit-learn==1.5.2          # Evaluation metrics (classification_report, etc.)
 scipy==1.14.1
 pandas==2.2.3                # seaborn dependency; compatible with numpy 2.1.x
 pillow==10.4.0 
+
+jupyterlab>=4.0.0
+notebook>=7.0.0
+ipykernel>=6.29.0
+jupyter_core>=5.5.0
+jupyter_client>=8.6.0
+jupyter-console>=6.6.3
