--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+git+https://github.com/openai/CLIP.git
 --extra-index-url https://download.pytorch.org/whl/cu121
 torch==2.3.1+cu121           # PyTorch (CUDA 12.1 build; works on CUDA 12.8 driver)
 torchvision==0.18.1+cu121
