--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ scikit-learn==1.5.2          # Evaluation metrics (classification_report, etc.)
 scipy==1.14.1
 pandas==2.2.3                # seaborn dependency; compatible with numpy 2.1.x
 pillow==10.4.0 
+tabulate>=0.9.0
 
 jupyterlab>=4.0.0
 notebook>=7.0.0
